fix offer header alignment

--- a/src/components/creditcard.css
+++ b/src/components/creditcard.css
@@ -67,9 +67,7 @@
         width: 100%;
     }
 
-    .offerHeader {
-        text-align: center;
-    }
+    
 }
 
 @media screen and (max-width: 850px) {
